<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/activityLabel"
        android:textAlignment="center"
        android:textColor="#5584a8"
        android:textSize="30sp"
        tools:textColor="#5584a8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/runID" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Duration" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Distance" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Steps" />

    <EditText
        android:id="@+id/paceTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Speed" />

    <EditText
        android:id="@+id/timeTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="#5584a8"
            android:text="@string/previousRun"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_weight="0"
            android:background="#5584a8"
            android:text="@string/nextRun"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back" />

</LinearLayout>