<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="com.example.runnable.RegisterActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.78"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/login_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/runnableLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingTop="@android:dimen/app_icon_size"
                android:text="@string/registerLabel"
                android:textAlignment="center"
                android:textColor="#5584a8"
                android:textSize="30sp"
                tools:textColor="#5584a8" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/firstNameHint"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/lastNameHint"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/emailHint"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textColorHint="@android:color/darker_gray" />


            <Button
                android:id="@+id/registerBtn"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="#5584a8"
                android:text="@string/registerBtn"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white"
                tools:style="@style/Widget.AppCompat.Button.Borderless" />


            <Button
                android:id="@+id/cancelBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:text="@string/cancelBtn"
                android:textAlignment="center"
                android:textColor="#5584a8"
                tools:style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


