<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.runnable.CameraFragment">

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/descriptionCamera"
        android:inputType="textPersonName"
        android:paddingTop="30dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/timeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timeInfoCamera"
        android:inputType="datetime"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/locationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/locationInfoCamera"
        android:inputType="text"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivImage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.43"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:rotation="90"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.11"
        android:background="@color/button_start"
        android:text="Upload Image"
        android:visibility="invisible" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="35dp"
        android:layout_weight="0.09"
        android:background="#5584a8"
        android:drawableLeft="@mipmap/ic_photo_camera_white_24dp"
        android:drawablePadding="3dp"
        android:paddingBottom="0dp"
        android:paddingLeft="15dp"
        android:text="@string/launchCamera"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white" />

</LinearLayout>