<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonSetFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@color/button_start"
                android:drawable="@color/button_start"
                android:text="@string/setStart"
                android:textAlignment="center"
                android:textColor="?android:attr/colorBackground" />


            <Button
                android:id="@+id/buttonSetTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/setEnd"
                android:textAlignment="center"
                android:textColor="?android:attr/colorBackground" />


            <Button
                android:id="@+id/buttonCalcDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@color/cardview_dark_background"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/getDistance"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>